--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Build server 
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.21
+
+    - name: Build server
       run: go build -o bin/server server.go
 
     - name: Build client target linux
