--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: latest
+          go-version-file: 'go.mod'
 
       - name: Build Docker Image
         run: docker build -t fyne-custom -f build/Dockerfile .
