--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version-file: 'go.mod'
+        run: |
+          go install github.com/fyne-io/fyne-cross@latest
 
       - name: Build Docker Image
         run: docker build -t fyne-custom -f build/Dockerfile .
@@ -62,7 +64,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: latest
+          go-version-file: 'go.mod'
 
       - name: Compile server
         run: |
