--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Configure Git identity
         run: |
-          git config --global user.email ${{ secrets.GIT_USER }}
+          git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
 
       - name: Checkout code
