--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -31,6 +31,7 @@ jobs:
             git checkout windows
           fi
           go install github.com/fyne-io/fyne-cross@latest
+          go mod tidy
           fyne-cross windows -image fyne-custom
           git add fyne-cross/dist/windows-amd64/*
           git commit -m "build(compile): compile for Windows"
