--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -66,7 +66,7 @@ jobs:
           fi
           go install github.com/fyne-io/fyne-cross@latest
           go mod tidy
-          rm server.go
+          rm server.go 2>/dev/null
           fyne-cross windows -image fyne-custom
           git add fyne-cross/dist/windows-amd64/*
           git commit -m "build(compile): compile for Windows"
@@ -83,7 +83,7 @@ jobs:
           fi
           go install github.com/fyne-io/fyne-cross@latest
           go mod tidy
-          rm server.go
+          rm server.go 2>/dev/null
           fyne-cross linux -image fyne-custom
           git add fyne-cross/dist/linux-amd64/*
           git commit -m "build(compile): compile for Linux"
