--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -63,6 +63,7 @@ jobs:
           rm server.go 2>/dev/null
           fyne-cross windows -image fyne-custom
           if ! git diff --quiet -- /dist/windows-amd64/; then
+            git ls-files | xargs git rm --cached
             git add fyne-cross/dist/windows-amd64/*
             git commit -m "build(compile): compile for Windows"
             git push origin windows
@@ -79,6 +80,7 @@ jobs:
           rm server.go 2>/dev/null
           fyne-cross linux -image fyne-custom
           if ! git diff --quiet -- /dist/linux-amd64/; then
+            git ls-files | xargs git rm --cached
             git add fyne-cross/dist/linux-amd64/*
             git commit -m "build(compile): compile for Linux"
             git push origin linux
