--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -57,8 +57,7 @@ jobs:
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout -f windows
-          git merge -X theirs origin/main
+          git checkout -b windows-wip
           go install github.com/fyne-io/fyne-cross@latest
           go mod tidy
           rm server.go 2>/dev/null
@@ -68,7 +67,9 @@ jobs:
             mv fyne-cross/dist/windows-amd64/Deskor.exe.zip Deskor.exe.zip
             git add Deskor.exe.zip
             git commit -m "build(compile): compile for Windows"
-            git push origin windows
+            git push origin windows-wip
+            git push origin -d windows
+            git push origin :windows-wip windows
           fi
 
       - name: Compile for Linux
@@ -76,8 +77,7 @@ jobs:
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout -f linux
-          git merge -X theirs origin/main
+          git checkout -b linux-wip
           go install github.com/fyne-io/fyne-cross@latest
           go mod tidy
           rm server.go 2>/dev/null
@@ -87,5 +87,7 @@ jobs:
             mv fyne-cross/dist/linux-amd64/Deskor.tar.xz Deskor.tar.xz
             git add Deskor.tar.xz
             git commit -m "build(compile): compile for Linux"
-            git push origin linux
+            git push origin linux-wip
+            git push origin -d linux
+            git push origin :linux-wip linux
           fi
