--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -28,12 +28,17 @@ jobs:
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout -f server
+          git checkout -f -b server-wip main
           go build -o bin/server server.go
           if ! git diff --quiet -- bin/server; then
-            git add bin/server
+            git ls-files | xargs git rm --cached
+            mv /bin/server server
+            mv .env.server.sample .env.server
+            mv build/server/README.md README.md
+            git add server .env.server README.md
             git commit -m "build(compile): compile for server"
-            git push origin server
+            git push origin -d server
+            git push origin server-wip:server
           fi
 
   compile-clients:
@@ -67,7 +72,9 @@ jobs:
           if ! git diff --quiet -- /dist/windows-amd64/; then
             git ls-files | xargs git rm --cached
             mv fyne-cross/dist/windows-amd64/Deskor.exe.zip Deskor.exe.zip
-            git add Deskor.exe.zip
+            mv .env.client.sample .env.client
+            mv build/client/README.md README.md
+            git add Deskor.exe.zip .env.client README.md
             git commit -m "build(compile): compile for Windows"
             git push origin -d windows
             git push origin windows-wip:windows
@@ -87,7 +94,9 @@ jobs:
           if ! git diff --quiet -- /dist/linux-amd64/; then
             git ls-files | xargs git rm --cached
             mv fyne-cross/dist/linux-amd64/Deskor.tar.xz Deskor.tar.xz
-            git add Deskor.tar.xz
+            mv .env.client.sample .env.client
+            mv build/client/README.md README.md
+            git add Deskor.tar.xz .env.client README.md
             git commit -m "build(compile): compile for Linux"
             git push origin -d linux
             git push origin linux-wip:linux
