ci(package-docs): 2 steps checkout

--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -28,7 +28,8 @@ jobs:
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout -f -b server-wip main
+          git checkout main
+          git checkout -f -b server-wip
           go build -o bin/server server.go
           if ! git diff --quiet -- bin/server; then
             git ls-files | xargs git rm --cached
@@ -64,7 +65,8 @@ jobs:
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout -f -b windows-wip main
+          git checkout main
+          git checkout -b windows-wip
           go install github.com/fyne-io/fyne-cross@latest
           go mod tidy
           rm server.go 2>/dev/null
@@ -86,7 +88,8 @@ jobs:
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout -f -b linux-wip main
+          git checkout main
+          git checkout -b linux-wip
           go install github.com/fyne-io/fyne-cross@latest
           go mod tidy
           rm server.go 2>/dev/null
