--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -22,13 +22,18 @@ jobs:
         with:
           go-version-file: 'go.mod'
 
+      - name: Set environment variables
+        run: |
+          GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
+          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+
       - name: Compile server
         run: |
           git reset --hard
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout $GITHUB_REF_NAME
+          git checkout $GIT_BRANCH
           git checkout -f -b server-wip
           go build -o bin/server server.go
           if ! git diff --quiet -- bin/server; then
@@ -55,6 +60,11 @@ jobs:
         with:
           go-version-file: 'go.mod'
 
+      - name: Set environment variables
+        run: |
+          GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
+          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+
       - name: Build Docker Image
         run: |
           docker build -t fyne-custom -f build/Dockerfile .
@@ -65,7 +75,7 @@ jobs:
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout $GITHUB_REF_NAME
+          git checkout $GIT_BRANCH
           git checkout -b windows-wip
           go install github.com/fyne-io/fyne-cross@latest
           go mod tidy
@@ -88,7 +98,7 @@ jobs:
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git fetch --all
-          git checkout $GITHUB_REF_NAME
+          git checkout $GIT_BRANCH
           git checkout -b linux-wip
           go install github.com/fyne-io/fyne-cross@latest
           go mod tidy
