--- a/.github/workflows/compile_actions.yml
+++ b/.github/workflows/compile_actions.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Compile server
         run: |
-          git reset --hard
+          git checkout -f $GIT_BRANCH
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git checkout -f -b server-wip
@@ -69,7 +69,7 @@ jobs:
 
       - name: Compile for Windows
         run: |
-          git reset --hard
+          git checkout -f $GIT_BRANCH
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git checkout -b windows-wip
@@ -90,7 +90,7 @@ jobs:
 
       - name: Compile for Linux
         run: |
-          git reset --hard
+          git checkout -f $GIT_BRANCH
           git config --global user.email ${{ secrets.GIT_USER }}@gmail.com
           git config --global user.name ${{ secrets.GIT_USER }}
           git checkout -b linux-wip
